--- a/src/css/style.css
+++ b/src/css/style.css
@@ -76,6 +76,9 @@ svg {
   color: rgb(122, 121, 121);
   margin-bottom: 10px;
 }
+.post__content {
+  word-break: break-all;
+}
 .post__position {
   font-size: 12px;
   color: rgb(122, 121, 121);
@@ -84,9 +87,10 @@ svg {
 input.post-text {
   min-width: 750px;
   padding: 15px;
-  padding-right: 130px;
+  padding-right: 210px;
   box-sizing: border-box;
   border: none;
+  outline: none;
   border-radius: 30px;
   -webkit-border-radius: 30px;
   -moz-border-radius: 30px;
@@ -94,7 +98,7 @@ input.post-text {
   -o-border-radius: 30px;
 }
 .post-container {
-  padding: 50px 30px;
+  padding: 30px 30px 70px;
   width: 60%;
 }
 .create-post {
@@ -104,10 +108,12 @@ input.post-text {
   justify-content: center;
   position: fixed;
   margin-bottom: 10px;
-  bottom: 40px;
+  bottom: 30px;
   background: rgb(207, 207, 207);
   background: radial-gradient(circle, rgba(207, 207, 207, 1) 0%, rgba(138, 138, 138, 1) 100%);
   border-radius: 30px;
+  border: 5px solid gray;
+  box-shadow: 0 0 10px 10px gray;
 }
 
 .warning {
@@ -145,15 +151,14 @@ input.post-text {
 }
 
 /*===video===*/
-.video-container {
+.video-container,
+.audio-container {
   position: fixed;
-  top: 100px;
-  left: 100px;
+  top: 50%;
+  left: 50%;
 }
-.post-video {
-  /* position: absolute;
-  right: 0;
-  top: 12px; */
+.post-video,
+.post-audio {
   width: 30px;
   cursor: pointer;
 }
@@ -161,7 +166,12 @@ input.post-text {
   display: none;
   max-width: 500px;
 }
-.video_active {
+.audio {
+  display: none;
+  max-width: 200px;
+}
+.video_active,
+.audio_active {
   display: block;
 }
 .video-controls {
@@ -171,13 +181,22 @@ input.post-text {
   left: calc(50% - 50px);
   padding: 5px;
   border-radius: 5px;
-  background-color: white;
 }
-.video-controls_active {
+.audio-controls {
+  display: none;
+  position: absolute;
+  background-color: transparent;
+  right: 10px;
+  bottom: 12px;
+}
+.video-controls_active,
+.audio-controls_active {
   display: flex;
 }
 .video-save,
-.video-cancel {
+.video-cancel,
+.audio-save,
+.audio-cancel {
   width: 30px;
   height: 30px;
   border: 0;
@@ -189,11 +208,13 @@ input.post-text {
   box-sizing: border-box;
   padding-top: 5px;
 }
-.video-timer {
+.video-timer,
+.audio-timer {
   margin: 0 10px;
   padding-top: 5px;
 }
-.video-post {
+.video-post,
+.audio-post {
   max-width: 100%;
 }
 
@@ -211,8 +232,6 @@ input.post-text {
   right: 50px;
   display: flex;
   gap: 5px;
-  /* width: 50px; */
-  /* margin-left: 10px; */
 }
 .location-btn {
   width: 30px;
@@ -284,8 +303,6 @@ input.post-text {
 }
 .filter-attach__button {
   cursor: pointer;
-  width: 30px;
-  height: 30px;
   padding: 5px 10px;
   border: none;
   border-radius: 30px;
@@ -303,6 +320,7 @@ input.post-text {
   color: white;
 }
 
-.video-form {
+.video-form,
+.audio-form {
   display: none;
 }
